--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
@@ -30,11 +31,10 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-imagepicker": "^2.0.0",
     "react-native-option-select": "^1.0.4",
-    "react-native-svg": "12.3.0",
+    "react-native-svg": "^13.4.0",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4",
-    "styled-components": "^5.3.5",
-    "@react-native-community/datetimepicker": "6.1.2"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
